fix: mobile design video now covers 100% screen width

--- a/front/src/components/Title-page/Title-page.css
+++ b/front/src/components/Title-page/Title-page.css
@@ -8,14 +8,16 @@
 #title-container {
   display: flex;
   flex-direction: column;
-  width: 87%;
+  width: 100%;
   gap: 20px;
 }
 
 #title-left-container {
   display: flex;
+  position: absolute;
+  z-index: 1;
+  top: 500px;
   width: 100%;
-  padding-top: 7px;
   padding-bottom: 7px;
   flex-direction: column;
   text-align: justify;
@@ -32,24 +34,33 @@
   justify-content: space-between;
 }
 
+#title-upper-wrapper p {
+  padding: 0 20px;
+}
+
 #mobile-video {
-  align-self: center;
-  max-width: 325px;
-  max-height: 400px;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  height: 550px;
 }
 
 video {
+  position: absolute;
+  top: -60px;
+  z-index: -2;
   width: 100%;
   border-radius: 2px;
 }
 
 .title {
   font-size: 1.9rem;
+  padding: 0 20px;
 }
 
 .yellow-title {
   font-size: 2.3rem;
-  color: var(--satin-sheen-gold)
+  color: var(--satin-sheen-gold);
 }
 
 #train-btn {
